<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_block_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_wide"
        android:layout_marginTop="@dimen/margin_wide"
        android:layout_marginEnd="@dimen/margin_wide"
        android:background="@android:color/holo_orange_light"
        android:fontFamily="@font/nunito_sans"
        android:padding="10dp"
        android:text="@string/text_block_1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/box_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text_block_2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/teal_700"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/text_block_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_block_1" />

    <TextView
        android:id="@+id/text_block_3"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/colorEdgeEffect"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center"
        android:text="@string/text_block_3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_block_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_block_2"
        app:layout_constraintTop_toTopOf="@+id/text_block_2" />

    <TextView
        android:id="@+id/text_block_4"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/colorMultiSelectHighlight"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center"
        android:text="@string/text_block_4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_block_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_block_2"
        app:layout_constraintTop_toBottomOf="@+id/text_block_3" />

    <TextView
        android:id="@+id/text_block_5"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/colorPressedHighlight"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center"
        android:text="@string/text_block_5"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_block_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_block_2"
        app:layout_constraintTop_toBottomOf="@+id/text_block_4" />

</androidx.constraintlayout.widget.ConstraintLayout>